--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,7 +8,7 @@
   --gray-color: #343434;
   --blue-soft: rgb(30, 30, 65);
   --skyblue: #61dafa;
-  --purple: #61da;
+  --purple: rgba(74, 10, 165, 0.667);
   --white: #ffffff;
 }
 
