--- a/src/styles/ToDoItem.scss
+++ b/src/styles/ToDoItem.scss
@@ -4,6 +4,7 @@
   margin: 0 auto;
   border-radius: 20px;
   overflow: hidden;
+  margin-bottom: 16px;
   &-description {
     background-color: var(--white);
     height: 72px;
@@ -22,27 +23,51 @@
     background-color: var(--blue-soft);
     height: 48px;
     border-top: 3px solid black;
-  }
-  span {
-    width: 34px;
-    height: 34px;
-    margin: 0 8px 0 8px;
-    border-radius: 50%;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    font-size: 18px;
-  }
-  span:nth-child(1) {
-    border: 2px solid rgb(255, 5, 5);
-    color: white;
-  }
+    span {
+      width: 34px;
+      height: 34px;
+      margin: 0 8px 0 8px;
+      border-radius: 50%;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      font-size: 18px;
+    }
+    span:nth-child(2) {
+      border: 2px solid rgb(255, 5, 5);
+      color: white;
+    }
 
-  span:nth-child(2) {
-    border: 2px solid green;
-    color: white;
-    transform: rotate(180deg);
+    span:nth-child(4) {
+      border: 2px solid green;
+      color: white;
+      transform: rotate(180deg);
+    }
+    p {
+      color: var(--white);
+    }
+  }
+  &-complete {
+    border: 3px solid black;
+    .ToDoItem-description {
+      background-color: var(--gray);
+      p {
+        color: gray;
+        text-decoration: line-through;
+      }
+    }
+    .ToDoItem-buttons {
+      background-color: var(--gray);
+
+      p:nth-child(3) {
+        color: gray;
+      }
+      span:nth-child(4) {
+        border: 2px solid black;
+        background-color: green;
+      }
+    }
   }
 }
