--- a/src/styles/ToDoBoard.scss
+++ b/src/styles/ToDoBoard.scss
@@ -3,9 +3,10 @@
   flex-direction: column;
   align-items: center;
   width: 95%;
-  border: 1px solid var(--skyblue);
+  border: 3px solid var(--skyblue);
   border-radius: 10px;
   margin: 0 auto;
   margin-top: 28px;
   padding: 16px;
+  background-color: var(--skyblue-soft);
 }
