--- a/src/styles/ToDoCounter.scss
+++ b/src/styles/ToDoCounter.scss
@@ -1,7 +1,6 @@
 .ToDoCounter {
   margin-bottom: 24px;
   h3 {
-    color: var(--white);
-    border-bottom: 1px solid var(--white);
+    border-bottom: 1px solid black;
   }
 }
