--- a/src/styles/ToDoItem.scss
+++ b/src/styles/ToDoItem.scss
@@ -5,10 +5,14 @@
   border-radius: 20px;
   overflow: hidden;
   margin-bottom: 16px;
-  border: 3px solid black;
+  position: relative;
+  backdrop-filter: blur(4px);
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  -webkit-backdrop-filter: blur(4px);
   &-description {
-    background-color: var(--white);
-    height: 72px;
+    height: 92px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,12 +25,12 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    background-color: var(--blue-soft);
-    height: 48px;
-    border-top: 3px solid black;
+
+    height: 38px;
+    border-top: 1px solid gray;
     span {
-      width: 34px;
-      height: 34px;
+      width: 28px;
+      height: 28px;
       margin: 0 8px 0 8px;
       border-radius: 50%;
       cursor: pointer;
@@ -35,38 +39,43 @@
       justify-content: center;
       font-weight: bold;
       font-size: 18px;
+      div {
+        display: flex;
+        justify-items: center;
+        align-items: center;
+      }
     }
-    span:nth-child(2) {
-      border: 2px solid rgb(255, 5, 5);
+    span:nth-child(1) {
+      background-color: red;
       color: white;
     }
 
-    span:nth-child(4) {
-      border: 2px solid green;
-      color: white;
+    span:nth-child(2) {
+      background-color: rgb(41, 196, 41);
+
       transform: rotate(180deg);
+      color: white;
     }
     p {
       color: var(--white);
     }
   }
   &-complete {
+    background-color: rgb(172, 172, 172);
     .ToDoItem-description {
       background-color: var(--gray);
       p {
-        color: gray;
         text-decoration: line-through;
       }
     }
     .ToDoItem-buttons {
       background-color: var(--gray);
 
-      p:nth-child(3) {
-        color: gray;
+      span:nth-child(1) {
+        background-color: red;
       }
-      span:nth-child(4) {
-        border: 2px solid black;
-        background-color: green;
+      span:nth-child(2) {
+        background-color: gray;
       }
     }
   }
