--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,7 @@
   --gray-color: #343434;
   --blue-soft: rgb(39, 39, 99);
   --skyblue: #61dafa;
+  --skyblue-soft: #d1cdf6;
   --purple: rgba(74, 10, 165, 0.667);
   --white: #ffffff;
 }
