--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --gray-color: #343434;
+  --gray-color: #16202a;
   --blue-soft: rgb(39, 39, 99);
   --skyblue: #61dafa;
   --skyblue-soft: #c9edf7;
