--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,7 +8,7 @@
   --gray-color: #16202a;
   --blue-soft: rgb(39, 39, 99);
   --skyblue: #61dafa;
-  --skyblue-soft: #c9edf7;
+  --skyblue-soft: #dbf7ff;
 
   --purple: rgba(74, 10, 165, 0.667);
   --white: #ffffff;
