--- a/src/styles/ToDoModal.scss
+++ b/src/styles/ToDoModal.scss
@@ -17,37 +17,37 @@
     padding: 24px;
     border-radius: 20px;
     align-items: center;
-    label {
+    &-header {
+      display: flex;
+      align-items: center;
+      width: 100%;
       margin-bottom: 20px;
     }
+
     textarea {
       width: 100%;
-      height: 80px;
+      height: 100px;
       border-radius: 10px;
       padding: 10px;
-      margin-bottom: 20px;
     }
   }
   &-buttons {
-    width: 70%;
+    width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
     button {
-      width: 65px;
-      height: 35px;
+      width: 55px;
+      height: 25px;
       border-radius: 10px;
       border: none;
       font-weight: bold;
     }
     button:nth-child(1) {
       background-color: gray;
+      margin-right: 10px;
     }
     button:nth-child(2) {
       background-color: var(--skyblue);
-      -webkit-box-shadow: inset -1px 3px 8px 5px #1f87ff,
-        2px 5px 16px 0px #0b325e, 4px 8px 15px 4px rgba(0, 0, 0, 0);
-      box-shadow: inset -1px 3px 8px 5px #1f87ff, 2px 5px 16px 0px #0b325e,
-        4px 8px 15px 4px rgba(0, 0, 0, 0);
     }
   }
 }
