--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,7 +7,7 @@
 :root {
   --gray-color: #16202a;
   --blue-soft: rgb(39, 39, 99);
-  --skyblue: #61dafa;
+  --skyblue: #2cc8f3;
   --skyblue-soft: #dbf7ff;
 
   --purple: rgba(74, 10, 165, 0.667);
