--- a/src/styles/ToDoList.scss
+++ b/src/styles/ToDoList.scss
@@ -4,5 +4,20 @@
 
   ul {
     display: grid;
+    
+  }
+
+  @media screen and (min-width: 760px){
+    width: 100%;
+    ul{
+      grid-template-columns: 1fr 1fr;
+      
+    }
+  }
+
+  @media screen and (min-width: 1024px) {
+    ul{
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 }
