--- a/src/styles/ToDoList.scss
+++ b/src/styles/ToDoList.scss
@@ -6,6 +6,14 @@
     display: grid;
     
   }
+  &-empty{
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    align-items: center;
+    width: 54%;
+    
+   
+  }
 
   @media screen and (min-width: 760px){
     width: 100%;
@@ -13,11 +21,25 @@
       grid-template-columns: 1fr 1fr;
       
     }
+    &-empty{
+      width: 35%;
+    }
+    
   }
 
   @media screen and (min-width: 1024px) {
     ul{
       grid-template-columns: repeat(3, 1fr);
+    }
+    &-empty{
+      width: 26%;
+    }
+  }
+
+  @media screen and (min-width: 1140px) {
+    
+    &-empty{
+      width: 16%;
     }
   }
 }
