--- a/src/styles/ToDoModal.scss
+++ b/src/styles/ToDoModal.scss
@@ -35,13 +35,24 @@
     width: 100%;
     display: flex;
     justify-content: flex-end;
+    
+    
     button {
+      will-change: transform;
       width: 55px;
       height: 25px;
       border-radius: 10px;
       border: none;
       font-weight: bold;
+      cursor: pointer;
+      transform: scale(1);
+    transition-duration: 0.3s;
     }
+
+    button:hover{
+      transform: scale(1.1);
+    }
+    
     button:nth-child(1) {
       background-color: gray;
       margin-right: 10px;
@@ -50,4 +61,12 @@
       background-color: var(--skyblue);
     }
   }
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+	
+	textarea:focus,
+	input:focus {
+		font-size: 16px;
+	}
 }
