--- a/src/styles/ToDoSearch.scss
+++ b/src/styles/ToDoSearch.scss
@@ -12,3 +12,11 @@
     padding: 5px;
   }
 }
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+	
+	
+	input:focus {
+		font-size: 16px;
+	}
+}
